--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         username: ${{ secrets.USER }}
         key: ${{ secrets.SSH_KEY }} 
         script: |
-          sudo docker pull staszatshevskii/nifty_diffie:latest
+          sudo docker pull staszatshevskii/nifty_diffie
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 staszatshevskii/nifty_diffie:latest 
+          sudo docker run --rm -d -p 5000:5000 staszatshevskii/nifty_diffie
           
