--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,21 @@ jobs:
 
     - name: Install dependencies
       run: | 
+        # обновление pip
         python -m pip install --upgrade pip 
+        # установка flake8 и его плагинов
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        # установка зависимостей
         pip install -r requirements.txt 
 
     - name: Test with flake8 and django tests
       run: |
+        # запуск проверки проекта по flake8
         python -m flake8
+        # перейти в папку, содержащую manage.py — 
+        #<корневая_папка_infra_actions>/<папка_проекта>/manage.py
         cd infra_project/
+        # запустить написанные разработчиком тесты
         python manage.py test
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -49,17 +56,20 @@ jobs:
           push: true
           tags: staszatshevskii/nifty_diffie:latest
   deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            sudo docker pull staszatshevskii/nifty_diffie
-            sudo docker stop $(sudo docker ps -a -q)
-            sudo docker run --rm -d -p 5000:5000 staszatshevskii/nifty_diffie
-           
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }} 
+        passphrase: ${{ secrets.PASSPHRASE }} # Если ваш ssh-ключ защищён фразой-паролем
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull staszatshevskii/nifty_diffie:latest
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 staszatshevskii/nifty_diffie:latest 
+          
